# Sorenza

./: .env.example  .gitignore  MIGRATION_FROM_EXTENSION.md  README.md  RELEASE_NOTES_0.3.0.md  VALIDATION.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: windows-build.yml
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActiveMission.tsx  AgentStrip.tsx  EvidencePage.tsx  HomePage.tsx  Icon.tsx  MissionComposer.tsx  MissionsPage.tsx  ProjectsPage.tsx  Sidebar.tsx  SkillsPage.tsx  TeamPage.tsx  Topbar.tsx
src/data/: mock.ts
src/lib/: tauri.ts
src/styles/: global.css
