[package]
name = "sorenza"
version = "0.3.0"
description = "Sorenza Desktop"
authors = ["Erick Labs"]
edition = "2021"

[lib]
name = "sorenza_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
